# scarecrow2d

./: .clang-format  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  compile_commands.json  shader_template.sc2d
.github/workflows/: linux.yml  macos.yml  windows.yml
benchmarks/: CMakeLists.txt  bench.cpp
cfg/: config.ini  resources.json
cmake/modules/: FindSDL2.cmake
data/scenes/: zone.json
docs/: CMakeLists.txt  Doxyfile  Doxyfile.in  README.md  _sidebar.md  conf.py  configfiles.md  docs.rst  index.html  index.rst  vectors.md
docs/_build/doctrees/: docs.doctree  environment.pickle  index.doctree
docs/_build/html/: .buildinfo  docs.html  genindex.html  index.html  install.html  objects.inv  search.html  searchindex.js  support.html
docs/doxygen/html/: aligned__allocator_8h_source.html  aligners_8h_source.html  allocator_8h_source.html  annotated.html  classBaseECSComponent-members.html  classBaseECSComponent.html  classBaseECSComponent__inherit__graph.dot  classBaseECSComponent__inherit__graph.md5  classBaseECSSystem-members.html  classBaseECSSystem.html  classECS-members.html  classECS.html  classIniIO-members.html  classIniIO.html  classes.html  classmath_1_1QuadTreeNode-members.html  classmath_1_1QuadTreeNode.html  classsc2d_1_1ResourceHolder-members.html  classsc2d_1_1ResourceHolder.html  classsc2d_1_1Result-members.html  classsc2d_1_1Result.html  classsc2d_1_1Shader-members.html  classsc2d_1_1Shader.html  classsc2d_1_1Sprite-members.html  classsc2d_1_1Sprite.html  classsc2d_1_1SpriteSheetInstanced-members.html  classsc2d_1_1SpriteSheetInstanced.html  classsc2d_1_1Texture2d-members.html  classsc2d_1_1Texture2d.html  classsc2d_1_1TextureAtlas-members.html  classsc2d_1_1TextureAtlas.html  classsc2d_1_1Window-members.html  classsc2d_1_1Window.html  classsc2d_1_1memory_1_1aligned__allocator-members.html  classsc2d_1_1memory_1_1aligned__allocator.html  classsc2d_1_1memory_1_1allocator-members.html  classsc2d_1_1memory_1_1allocator.html  classsc2d_1_1memory_1_1allocator__inherit__graph.dot  classsc2d_1_1memory_1_1allocator__inherit__graph.md5  classsc2d_1_1memory_1_1dynamic__linear__allocator-members.html  (+284 more)
docs/doxygen/latex/: annotated.tex  classBaseECSComponent.tex  classBaseECSComponent.tex.tmp  classBaseECSSystem.tex  classECS.tex  (+121 more)
sc2d/: CMakeLists.txt
sc2d/src/collections/: arr.h  arrheap.h  queue.h  vec.h
sc2d/src/core/: arr.h  camera.cpp  camera.h  input.cpp  input.h  input_types.h  limits.h  log2.h  resources.cpp  resources.h
sc2d/src/core/dbg/: ogl_errors.cpp
sc2d/src/core/esc/: ecs_component.cpp  ecs_system.cpp  ecs_system.h
sc2d/src/core/glfw_base/: glfwbase.cpp  glfwbase.h  sctime.cpp  sctime.h  window.cpp  window.h
sc2d/src/core/os/: error_types.h
sc2d/src/core/rendering/: render.cpp  render.h  renderable.h  rendering_types.cpp  renderqueue.cpp  renderqueue.h  shader.cpp  shader.h  textureobject.cpp  textureobject.h  utils.h
sc2d/src/core/rendering/scene/: scene2d.cpp  scene2d.h  sprite.cpp  sprite_sheet_inst.cpp  sprite_sheet_inst.h  spritebatch.cpp  text_ft2.cpp  text_ft2.h  tiled_map.cpp  tiled_map.h
sc2d/src/filesystem/: configLoader.cpp  configLoader.h  fs_constants.h  resourceHolder.cpp  resourceHolder.h
sc2d/src/game/: menu.h
sc2d/src/math/: geometry2d.h  matrix2.h  matrix3.h  matrix4.h  quadtree.cpp  quadtree.h  transform.h  utils.h  vector2.h  vector3.h
sc2d/src/memory/: allocator.h  memory.h  pool_allocator.cpp
sc2d/src/shaders/: sprite_batched.vert  sprite_default.frag  sprite_default.vert  spritesheet.frag  spritesheet.vert  text_ft2.frag  text_ft2.vert
sc2d/src/utils/: ini_io.cpp
sc2d_client/: CMakeLists.txt
sc2d_client/cfg/: resources.json
sc2d_client/data/scenes/: zone.json
sc2d_client/src/: game_main.cpp  game_main.h  main.cpp  menu.cpp  menu.h
sc2d_editor/: CMakeLists.txt
sc2d_editor/src/: game_main.cpp  game_main.h
src/: file_manager.cpp  file_manager.h  game.cpp  game.h  gameObject.cpp  gameObject.h  inputManager.cpp  inputManager.h  levelmap.cpp  levelmap.h  main.cpp  oglMain.cpp  shader.cpp  shader.h  texture.cpp  texture.h  textureManager.cpp  textureManager.h  window.h
src/collections/: arr.h  arrstack.h  queue.h  vec.h
src/components/: components.h  ecs.cpp  ecs.h  inputController.cpp  inputController.h  sprite.cpp  sprite.h  transform.cpp  transform.h
src/core/: asserts.h  batchsprite.cpp  batchsprite.h  camera.cpp  compiler.h  debug_utils.cpp  debug_utils.h  event.h  input.cpp  inputManager.cpp  inputManager.h  input_types.h  limits.h  log2.cpp  log2.h  logger.h  logs.cpp  logs.h  renderable.cpp  renderable.h  rendering_types.h  result.h  sc2dTypes.h  shader.cpp  shader.h  sprite.cpp  sprite.h  spriteTypes.cpp  spriteTypes.h  sprite_sheet.cpp  sprite_sheet.h  sprite_sheet_inst.cpp  sprite_sheet_inst.h  spritebatch.cpp  spritebatch.h  stacktrace.cpp  stacktrace.h  text_ft2.cpp  text_ft2.h  texture.cpp  (+11 more)
src/editor/: editor_main.cpp  editor_main.h
src/filesystem/: configLoader.cpp  configLoader.h  configNames.cpp  configNames.h  fs_constants.cpp  fs_constants.h  resourceHolder.cpp  resourceHolder.h  shader_files.h
src/game/: game_main.cpp  game_main.h
src/math/: geometry2d.h  matrices.h  matrix2.h  matrix3.h  matrix4.h  quadtree.cpp  quadtree.h  size2d.h  transform.cpp  transform.h  utils.h  vector.cpp  vector.h  vector2.h  vector3.h  vector4.h
src/memory/: aligned_allocator.cpp  aligned_allocator.h  aligners.h  allocator.cpp  allocator.h  allocator.inl  dynamic_linear_allocator.cpp  dynamic_linear_allocator.h  free_list_allocator.cpp  free_list_allocator.h  heap_allocator.cpp  heap_allocator.h  memory.cpp  memory.h  pool_allocator.cpp  pool_allocator.h
src/physics/: collision2d.h
src/shaders/: sprite-default.frag  sprite-default.vert  sprite_batched.frag  sprite_batched.vert  sprite_default.frag  spritesheet.frag  spritesheet.vert  text_ft2.frag  text_ft2.vert
src/utils/: ini_io.cpp  ini_io.h
tests/: CMakeLists.txt  arr_tests.cpp  math_tests.cpp  queue_tests.cpp  test_data_types.h  unit.cpp  vec_tests.cpp
(+221 files in other folders)
